# rust-creative-coding

./: Cargo.toml  README.md
src/: lib.rs
src/examples/: simple_gui.rs  wgpu_compute_shaders.rs  wgpu_image.rs
src/examples/shaders/: cs.wgsl  fs.wgsl  passtrough.wgsl
src/shader_processing/: mod.rs  model.rs  pipeline.rs
