[package]
name = "CreativeCoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
nannou_egui = "0.19.0"
tokio = "1.36.0"
bytemuck = "1.14.3"

[lib]
name = "lib"
path = "src/lib.rs"

[dev-dependencies]
futures = "0.3"


[[example]]
name = "simple_gui"
path = "src/examples/simple_gui.rs"

[[example]]
name = "wgpu_image"
path = "src/examples/wgpu_image.rs"

[[example]]
name = "wgpu_compute_shaders"
path = "src/examples/wgpu_compute_shaders.rs"